BAEL-6254: Refactor