@@ -35,6 +35,7 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <configuration>
+                    <argLine>--enable-preview</argLine>
                     <argLine>--add-modules=jdk.incubator.concurrent</argLine>
                 </configuration>
             </plugin>
